--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ click = "^8.0"
 opencv-contrib-python = "^4.6.0.66"
 numpy = "^1.23.5"
 rospkg = "^1.4.0"
+transforms3d = "^0.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1"
